[package]
name = "rf_sweep"
version = "0.1.0"
edition = "2021"

[lib]
name = "rf_sweep"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1.10"
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
